# algotrading

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  config-forex.json  config.json  forex_position_sizing_analysis.md
docs/: PROJECT_STATUS.md  quant-strat.md
src/: bollinger.rs  breakout.rs  carry.rs  config.rs  connection.rs  futures_utils.rs  lib.rs  main.rs  margin.rs  market_data.rs  momentum.rs  order_types.rs  orders.rs  portfolio.rs  position_inertia.rs  position_manager.rs  risk.rs  risk_budgeting.rs  risk_budgeting_inertia.rs  security_types.rs  stats.rs  trading_integration.rs  transaction_cost.rs  volatility.rs
src/signals/: bollinger.rs  breakout.rs  carry.rs  coordinator.rs  core.rs  example.rs  mod.rs  momentum.rs  utils.rs
tests/: momentum_refactor_tests.rs  position_inertia_tests.rs  risk_budgeting_inertia_tests.rs  trading_integration_tests.rs  transaction_cost_tests.rs
