[package]
name = "algotrading"
version = "0.1.0"
edition = "2024"

[dependencies]
ibapi = "1.2.2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
